Fixed some issues with about page spacing and links

--- a/responsive.css
+++ b/responsive.css
@@ -470,7 +470,7 @@ and (max-device-width: 480px) {
 	
 	.fact {
 		margin: 2.5% 0;
-		width: 42.5%;
+		width: 45%;
 		float: left;
 		clear: none;
 	}
