--- a/stylesheet.css
+++ b/stylesheet.css
@@ -157,6 +157,10 @@ section {
 	background-color: #ff6666;
 }
 
+#yellow {
+	background-color: #FFE000;
+}
+
 #green {
 	background-color: #00cc66;
 }
@@ -472,12 +476,28 @@ input#submit {
 
 .resume p {
 	font-size: 75%;
-	color: #474747;
+	color: gray;
 	text-align: left;
 	padding: 0;
 	margin: 0;
 	display: inline;
 	overflow: auto;
+}
+
+.resume i {
+	color: gray;
+}
+
+.resume a:hover p {
+	color: #474747;
+}
+
+.resume a:hover {
+	text-decoration: none;
+}
+
+.resume a:hover i {
+	color: #474747;
 }
 
 
